# seq-opt-jax

./: .gitignore  README.md  pyproject.toml  styles.mplstyle
.github/: renovate.json
.github/scripts/: build.py
.github/workflows/: deploy.yml
apps/: chapter_1.py  chapter_2.py  chapter_8.py  chapter_8_II.py  chapter_8_new.py
assets/: index.html
chapters/: chapter_1.py
notebooks/: chapter_1.py
