[project]
name = "seq-opt-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.6.1",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "micropip>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
